--- a/client/src/HomePage/HomePage.module.css
+++ b/client/src/HomePage/HomePage.module.css
@@ -1,13 +1,13 @@
 .HomePage{
     width: 90%;
-    height: 90vh;
-    margin: 10% auto;
+    margin-top: 15vh;
+    margin-bottom: 10vh;
     background-color: white;
     -webkit-box-shadow: 0px 33px 17px -22px rgba(0,0,0,0.56);
     -moz-box-shadow: 0px 33px 17px -22px rgba(0,0,0,0.56);
     box-shadow: 0px 33px 17px -22px rgba(0,0,0,0.56);
-    overflow: auto;
-    padding-bottom: 25px;
+    padding-bottom: 7%;
+    max-width: 900px;
 }
 
 /* width */
