--- a/client/src/ResultsPage/ResultsPage.module.css
+++ b/client/src/ResultsPage/ResultsPage.module.css
@@ -10,10 +10,25 @@
     max-width: 900px;
 }
 
+.title{
+    display: flex;
+    align-items: center;
+    padding-right: 6%;
+}
+
 .ResultsPage h3 {
     text-align: left;
     padding-left: 8%;
     padding-top: 3%;
+    width: 80%;
+}
+
+.reportButton{
+    font-size: .7em;
+    margin-left: auto;
+    text-align: center;
+    line-height: 2%;
+    padding-top: 5%;
 }
 
 .inputs{
