--- a/client/src/HomePage/HomePage.module.css
+++ b/client/src/HomePage/HomePage.module.css
@@ -1,6 +1,6 @@
 .HomePage{
     width: 90%;
-    margin-top: 15vh;
+    margin-top: 10vh;
     margin-bottom: 10vh;
     background-color: white;
     -webkit-box-shadow: 0px 33px 17px -22px rgba(0,0,0,0.56);
@@ -8,7 +8,35 @@
     box-shadow: 0px 33px 17px -22px rgba(0,0,0,0.56);
     padding-bottom: 7%;
     max-width: 900px;
+    z-index: 1;
 }
+
+
+.header{
+    width: 100%;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    margin-top: 5%;
+}
+
+.HomePage h1{
+    color: rgb(0, 0, 0);
+    font-size: 3em;
+}
+
+.HomePage img{
+    width: 10%;
+    height: 10%;
+    margin-right: 4%;
+}
+
+@media only screen and (max-width: 600px) {
+    .HomePage h1{
+        font-size: 1.5em;
+    }
+  }
 
 /* width */
 ::-webkit-scrollbar {
