--- a/client/src/ResultsPage/ResultsPage.module.css
+++ b/client/src/ResultsPage/ResultsPage.module.css
@@ -1,6 +1,6 @@
 .ResultsPage {
     width: 90%;
-    margin-top: 15vh;
+    margin-top: 10vh;
     margin-bottom: 10vh;
     background-color: white;
     -webkit-box-shadow: 0px 33px 17px -22px rgba(0,0,0,0.56);
@@ -8,6 +8,7 @@
     box-shadow: 0px 33px 17px -22px rgba(0,0,0,0.56);
     padding-bottom: 7%;
     max-width: 900px;
+    z-index: 1;
 }
 
 .title{
