update frontend mobile styling

--- a/client/src/HomePage/HomePage.module.css
+++ b/client/src/HomePage/HomePage.module.css
@@ -33,6 +33,9 @@
 }
 
 @media only screen and (max-width: 600px) {
+    .HomePage{
+        margin-top: 5vh;
+    }
     .HomePage h1{
         font-size: 1.5em;
     }
