--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,6 +6,7 @@ body {
   min-height: 100vh;
   z-index: -1;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   background: #536976;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #292E49, #536976);  /* Chrome 10-25, Safari 5.1-6 */
@@ -24,4 +25,23 @@ a{
   width: 100%;
   height: 100%;
   margin: 0;
+}
+
+.pagelinks {
+  font-size: .7em;
+  margin-bottom: 8vh;
+  width: 100%;
+  text-align: center;
+  color: lightgray;
+  z-index: 1;
+}
+
+.pagelinks a{
+  color: white;
+  margin: 1%;
+  transition: 0.3s ease;
+}
+
+.pagelinks a:hover{
+  color: lightgray;
 }
